# clickhouse-udf

./: Cargo.toml  LICENSE  README.md  compose.yaml
config/clickhouse/: config.xml  users.xml
config/clickhouse/config.d/: clusters.xml  keeper.xml  macros.xml  tables.xml
config/clickhouse/function.d/: echo.xml  neoTopK.xml  neo_top_k.xml  test.xml
src/: echo.rs  main.rs  neo_top_k.rs  test.rs
