[package]
name = "clickhouse-udf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
miette = "5.10.0"
topk = "0.5.0"

[[bin]]
name = "clickhouse-udf-neo-top-k"
path = "src/clickhouse-udf-neo-top-k.rs"

[[bin]]
name = "test"
path = "src/test.rs"
