[package]
name = "clickhouse-udf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
miette = "5.10.0"
topk = "0.5.0"

[[bin]]
name = "neo_top_k"
path = "src/neo_top_k.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"
